# audio_transcribe

./: LICENSE.md  README.md  pyproject.toml  setup.py
audio_transcribe/: __init__.py  cli.py  main.py
audio_transcribe/core/: __init__.py  models.py  transcriber.py  utils.py
